--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "axios": "^1.2.2",
     "core-js": "^3.8.3",
+    "sweetalert": "^2.1.2",
     "tailwind": "^4.0.0",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-sweetalert2": "^5.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
